--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,4 +9,8 @@ body,html {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  margin:0;
+}
+.Toastify__toast {
+  padding: 0;
 }
