--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,11 +6,17 @@
 }
 
 body,html {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
-  margin:0;
+  background-color: white;
+  -webkit-font-smoothing: antialiased;
+  overflow-x:hidden;
+  height: 100%;
+  width: 100%;
 }
 .Toastify__toast {
   padding: 0;
+}
+
+#root{
+    height: 100%;
+    width: 100%;
 }
