--- a/src/app/markdown.css
+++ b/src/app/markdown.css
@@ -1,13 +1,11 @@
 .markdown-body strong,
 .markdown-body b {
   font-weight: bold;
-  color: #2c3e50;
 }
 
 .markdown-body em,
 .markdown-body i {
   font-style: italic;
-  color: #8e44ad; 
 }
 
 .markdown-body h1 {
@@ -48,12 +46,23 @@
 }
 
 .markdown-body code {
-  background-color: #f5f5f5;
+  background-color: #dfd5d5;
   padding: 2px 6px;
   border-radius: 4px;
-  font-family: 'Courier New', Courier, monospace;
-  font-size: 1.2rem;
+  font-size: 1.3rem;
   font-weight: bold;
 }
+
+.markdown-body {
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+}
+
+.markdown-body pre,
+.markdown-body code {
+  white-space: pre-wrap;
+  word-break: break-word;
+}
+
 
 
