--- a/src/app/markdown.css
+++ b/src/app/markdown.css
@@ -45,12 +45,18 @@
   margin-bottom: 5px;
 }
 
+.markdown-body p {
+  font-size: 1.2rem;
+  
+}
+
 .markdown-body code {
-  background-color: #dfd5d5;
+  background-color: var(--foreground);
   padding: 2px 6px;
   border-radius: 4px;
   font-size: 1.3rem;
   font-weight: bold;
+  color: var(--background);
 }
 
 .markdown-body {
@@ -61,7 +67,7 @@
 .markdown-body pre,
 .markdown-body code {
   white-space: pre-wrap;
-  word-break: break-word;
+
 }
 
 
